[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "9.5.25"
jinja2 = "3.1.6"
idna = "3.7"
requests = "2.32.2"
urllib3 = "2.2.2"
certifi = "2024.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
