[tool.poetry]
name = "lint-python-imports"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "1.7.1"
prospector = "1.10.3"
pylint = "2.17.7"
gitpython = "3.1.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
