[project]
name = "batch_client"
authors = [{ name = "Product Team", email = "development@fluidattacks.com" }]
requires-python = ">=3.11"
dependencies = [
    "click >=8.1.3, <9.0.0",
    "fa_purity >=1.38.0, <2.0.0",
    "pathos >=0.2.8, <1.0.0",
    "mypy-boto3-batch >=1.28.36, <2.0.0",
    "types-boto3 >=1.0.2, <2.0.0",
    "more-itertools >=8.10.0, <10.0.0",
]
description = "AWS batch python client"
dynamic = ["version"]

[project.scripts]
batch-client = 'batch_client._cli:main'

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
